fix: increase font size for format_list_text_description for improved readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -678,7 +678,7 @@ body {
   .format_list_text_description {
     padding-top: 16px;
     padding-bottom: 16px;
-    font-size: 12px;
+    font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
